fix: deployment and environment updates

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,6 @@ DATABASE_URL="postgresql://username:Guillain360@host:5432/postgres?pgbouncer=tru
 DIRECT_URL="postgresql://username:Guillain360@host:5432/postgres"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="gwvhvwevwveuvwvuywvcwy="
-NEXT_PUBLIC_SUPABASE_URL="https://amyxekexiknbbulbahc.supabase.co"
+SUPABASE_URL="https://amyxekexiknbbulbahc.supabase.co"
 NEXT_PUBLIC_SUPABASE_ANON_KEY="gewgdwcdtwyccauuwyuwv"
 SUPABASE_SERVICE_ROLE_KEY="hewbbweyvucwhcvhwvevweuwewyv"
